<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nav_record">Record</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="share_title">Nisafone Transcription</string>
</resources>
