<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_recordings_yet">No recordings yet</string>
    <string name="start_recording_hint">Start a recording to see it here</string>
    <string name="toggle_favorite">Toggle favorite</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="no_transcription_available">No transcription available</string>
    <string name="duration_format">Duration: %1$s</string>
    <string name="segments_format">%1$d segments</string>
</resources>
