<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_title">Settings</string>
    <string name="storage_used">Storage Used</string>
    <string name="storage_info">%1$dMB (%2$d models downloaded)</string>
    <string name="active_model">Active Model</string>
    <string name="none_selected">None selected</string>
    <string name="realtime_transcription">Real-time transcription</string>
    <string name="batch_transcription">Batch transcription</string>
    <string name="language_hint">Language Hint</string>
...
